# Eon

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.txt  DRAFT.md  LICENSE.txt  Makefile  README.md  lint-commonmark-links.py  requirements.lint-commonmark-links.txt  requirements.lint-sources-python.txt  windows-vcvarsall.bat
.github/workflows/: build.yml
interpreter/: CMakeLists.txt  Makefile  Makefile.c99  Makefile.cl  Makefile.clang  Makefile.config  Makefile.gcc  Makefile.gcc-compatible  README.md  TODO.md  nmake.bat  roadmap.org  tasks.org
interpreter/core/: Any.c  Any.h  Bit.h  CMakeLists.txt  Err.c  Err.h  Log.c  Log.cpp  Log.h  Makefile  Memory.cpp  Memory.h  Ref.h  SysTypes.h  System.cpp  System.h  Unistd.h  log.cpp  log.h  memory.cpp  memory.h  msvc-nmake.bat  system.cpp  system.h  util.h
interpreter/core/std/: SysTypes.h  time.h  unistd.h
interpreter/i386/: Bit.h  CMakeLists.txt  IO.asm  IO.h  IO.nasm  Log.c  Log.cpp  Memory.asm  Memory.c  Memory.cpp  Memory.nasm  Multiboot.c  Multiboot.cpp  Multiboot.h  System.asm  System.c  System.cpp  System.nasm  arg.asm  io.h  io.nasm  layout.lds  log.cpp  main.asm  main.c  memory.cpp  memory.nasm  support.cpp  support.h  support.nasm  system.cpp  system.nasm  vm.sh
interpreter/i386/multiboot/: Boot_Device.cpp  Boot_Device.h  Drive.cpp  Drive.h  Info.cpp  Info.h  Information.cpp  Memory_Region.cpp  Memory_Region.h  Memory_Region_Iterator.cpp  Memory_Region_Iterator.h  boot_device.cpp  boot_device.h  drive.cpp  drive.h  header.c  header.cpp  information.cpp  information.h  memory_region_iterator.cpp
interpreter/i386/vga/: Attr.c  Attr.cpp  Attr.h  CRT.c  CRT.cpp  CRT.h  Color.c  Color.cpp  Color.h  Extern.c  Extern.cpp  Extern.h  Gfx.c  Gfx.cpp  Gfx.h  Log.c  Log.h  Seqr.c  Seqr.cpp  Seqr.h  Text.c  Text.cpp  Text.h  attribute.cpp  attribute.h  color.cpp  color.h  crt.cpp  crt.h  general.cpp  general.h  graphics.cpp  graphics.h  sequencer.cpp  sequencer.h  text_mode.cpp  text_mode.h
interpreter/javascript/: Any.c  Any.h  CMakeLists.txt  Err.c  Err.h  Input.c  Input.h  Makefile  Ref.h  Str.c  Str.h  Token.c  Token.h  eon.js  main.c  main.cpp  main.js  package.json
interpreter/javascript/eon/: Any.c  Any.h  Input.c  Input.h  Ref.h  Str.c  Str.h  Token.c  Token.h  any.c  any.h  err.h  input.c  input.h  ref.h  str.c  str.h  token.c  token.h
interpreter/javascript/test/: number.js
interpreter/js/: CMakeLists.txt  Err.h  Errno.c  Errno.h  Input.c  Input.h  Str.c  Str.h  Token.c  Token.h  index.js  main.c  package.json
interpreter/js/test/: number.js
interpreter/native/: CMakeLists.txt  Errno.c  Errno.h  Log.c  Log.cpp  Log.h  Makefile  Memory.c  Memory.cpp  System.c  System.cpp  System.h  log.cpp  main.c  memory.cpp  perf.sh  system.cpp
interpreter/scheme/: CMakeLists.txt  compiler.c  edlin.c  heap.c  heap.h  io.c  port.h  proc.c  proc.h  runtime.c  string.c  string.h  symbol.c  sysunix.c  table.c  vector.c  vector.h
interpreter/x86/: CMakeLists.txt  Log.cpp  Memory.cpp  Memory.nasm  System.cpp  System.nasm  bit.h  bochs.sh  io.cpp  io.h  io.nasm  layout.lds  log.cpp  memory.cpp  support.cpp  support.h  support.nasm  system.cpp  system.nasm  vm.sh
interpreter/x86-32/: CMakeLists.txt  GDT.asm  IO.h  Makefile  Memory.c  Multiboot.c  Multiboot.h  arg.asm  iso.sh  layout.lds  main.c  tasks.org
interpreter/x86-32/vga/: Attr.c  CRT.c  CRT.h  Color.c  Extern.c  Extern.h  Gfx.c  Log.c  Seqr.c  Text.h
interpreter/x86/multiboot/: Boot_Device.cpp  Boot_Device.h  Drive.cpp  Drive.h  Header.cpp  Information.cpp  Memory_Region_Iterator.cpp  boot_Device.cpp  boot_Device.h  boot_device.cpp  drive.cpp  drive.h  header.cpp  information.cpp  information.h  memory_region_iterator.cpp  memory_region_iterator.h
interpreter/x86/vga/: attribute.cpp  attribute.h  color.cpp  color.h  crt.cpp  crt.h  general.cpp  general.h  graphics.cpp  graphics.h  sequencer.cpp  sequencer.h  text_mode.cpp  text_mode.h
language/: Makefile  draft.k  specification.md  tasks.org
spec/: TODO.md  draft.k  language.md  specification.md  tasks.org
specification/: Makefile  README.md  Specification.md  TODO.md  draft.k  language.md  specification.md  tasks.org  validate-commonmark-links.py  wf.sh
stdlib/: README.md  TODO.md  core.eon  core.k  rescue.k  tasks.org
tools/: lint-commonmark-links.py
