link_libraries(m)
add_definitions(-DLINUX -DX86_64 -DSCMLIB=${CMAKE_CURRENT_SOURCE_DIR})

add_executable(${PROJECT_NAME}.scheme
    scheme.c
    heap.c
    runtime.c
    compiler.c
    macros.c
    logical.c
    symbol.c
    string.c
    number.c
    list.c
    vector.c
    proc.c
    port.c
    io.c
    edlin.c
    table.c
    sysunix.c
    scheme.h
    object.h
    sys.h
    heap.h
    runtime.h
    io.h
    compiler.h
    macros.h
    logical.h
    symbol.h
    string.h
    number.h
    list.h
    vector.h
    proc.h
    port.h)
